package pt.ipp.isep.dei.esoft.project.application.controller;

import pt.ipp.isep.dei.esoft.project.repository.*;

public class RegisterStoreController {

    private OrganizationRepository organizationRepository =null;

    private StoreRepository storeRepository=null;

    private StateRepository stateRepository=null;

    private DistrictRepository districtRepository=null;

    private CityRepository cityRepository=null;

    public RegisterStoreController(){
        getOrgani
    }
}
