package pt.ipp.isep.dei.esoft.project.domain;

public class Location {
    String streetAddress;
    City city;
    District district;
    State state;
    String zipCode;
}
