package pt.ipp.isep.dei.esoft.project.ui.console;

public class RegisterStoreUI implements Runnable{

    @Override
    public void run (){

    }
}
